--- a/app/views/projects/_no-projects.html.erb
+++ b/app/views/projects/_no-projects.html.erb
@@ -1,5 +1,4 @@
-  
 <div class="start__posting-projects">
   <%=inline_svg_tag 'project.svg'%>
-  start posting projects
+  <p>start posting projects</p>
 </div>
