--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
-<%render partial: "form",locals: {project: @project}  %>
 <main class="client__feed">
   <div class="projects__heading">
     <h3>my postings</h3>
+    <%=link_to 'New Project',new_project_path%>
   </div>
   <ul class="projects-posted-by-client">
     <% if @projects.empty? %>
