--- a/app/assets/stylesheets/_allprojects.scss
+++ b/app/assets/stylesheets/_allprojects.scss
@@ -6,8 +6,9 @@ h2 {
   border: 1px solid $border-color;
   height: 4rem;
   line-height: 4rem;
-  text-align: center;
-  font-family: $font-comforta;
+  padding: 0 2rem;
+  font-weight: 600;
+  font-size: 1.6rem;
   border-top-right-radius: 0.5rem;
   border-top-left-radius: 0.5rem;
   background-color: white;
@@ -19,6 +20,9 @@ h2 {
   overflow: scroll;
   height: 100%;
   scrollbar-width: none;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
   list-style-type: none;
   transition: transform 0.7s;
 
@@ -112,5 +116,23 @@ h2 {
         }
       }
     }
+  }
+}
+
+.no__projects-to-show {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 0.5rem;
+  width: 100%;
+  background: white;
+  border: 1px solid $border-color;
+  border-top: none;
+  & > svg {
+    width: 150px;
+    height: 150px;
+  }
+  p {
+    font-size: 1rem;
   }
 }
