--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -172,6 +172,9 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     overflow: scroll;
     max-height: 90vh;
     scrollbar-width: none;
+    &::-webkit-scrollbar {
+      width: 0;
+    }
     transition: transform 0.7s;
 
     @import "allprojects";
