--- a/app/assets/stylesheets/profile/_user-profile.scss
+++ b/app/assets/stylesheets/profile/_user-profile.scss
@@ -184,6 +184,9 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     position: relative;
     width: 0%;
     transform: translateX(100%);
+    &::-webkit-scrollbar {
+      width: 0;
+    }
     .no__data {
       @include svg();
     }
