--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -27,16 +27,21 @@ $border: 1px solid #b9b9b9;
     cursor: pointer;
     transition: 1s background-color;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+    &:hover {
+      background: #11619b;
+    }
   }
 }
 
-.sign__up-page {
+.sign__up-page,
+.update-users-page {
   & h1 {
     padding: 1rem 3rem 0;
     text-align: center;
     font-family: "Montserrat";
   }
-  .sign__up-form {
+  .sign__up-form,
+  .update__form {
     display: flex;
     margin: 0;
     flex-direction: column;
@@ -123,10 +128,12 @@ $border: 1px solid #b9b9b9;
 }
 
 @media (min-width: 480px) {
-  .sign__up-page {
+  .sign__up-page,
+  .update-users-page {
     padding: 0rem 3.5rem;
     padding-top: 1rem;
-    .sign__up-form {
+    .sign__up-form,
+    .update__form {
       border: $border;
 
       .role__field {
@@ -151,13 +158,17 @@ $border: 1px solid #b9b9b9;
   }
 }
 @media (min-width: 768px) {
-  .sign__up-page {
-    padding: 0rem 12rem;
-    padding-top: 3rem;
-
-    .sign__up-form {
-      background: white;
+  .sign__up-page,
+  .update-users-page {
+    form {
       max-width: 600px;
+      margin: 2rem auto;
+    }
+
+    .sign__up-form,
+    .update__form {
+      background: white;
+
       border-radius: 10px;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px 8px rgba(0, 0, 0, 0.07),
         0 8px 16px rgba(0, 0, 0, 0.07), 0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
@@ -203,13 +214,19 @@ $border: 1px solid #b9b9b9;
   }
 }
 @media (min-width: 992px) {
-  .sign__up-page {
-    .sign__up-form {
+  .sign__up-page,
+  .update-users-page {
+    form {
+      width: 525px;
+      margin: 0 auto;
+    }
+
+    .sign__up-form,
+    .update__form {
       h1 {
         font-size: 1.5rem;
       }
-      width: 525px;
-      margin: 0 auto;
+
       & > div {
         margin-bottom: 1.8rem;
       }
