--- a/app/views/projects/_category.html.erb
+++ b/app/views/projects/_category.html.erb
@@ -1,1 +1,15 @@
-<h1>category</h1>
+<div class="project__category" >
+  <div class="search__category">
+    <%= f.label :category,'Category' %>
+    <%= f.select :category, all_categories, include_blank: 'Choose any' %>
+    <%unless project.errors[:category].empty?%>
+      <div class="error">
+        <i class="fas fa-exclamation-circle"></i>
+        <%=project.errors[:category][0]%></div>
+    <% end %>
+  </div>
+  <div class="search__subcateogory">
+    <%= f.label :subcategory,'Subcategory' %>
+    <%= f.select(:subcategory, [], include_blank: 'Choose any') %>
+  </div>
+</div>
