--- a/app/views/projects/_title.html.erb
+++ b/app/views/projects/_title.html.erb
@@ -1,5 +1,9 @@
 <div class="project__title-form">
-  <%= f.label :title,'Enter the name of your job post'  %>
-  <br />
-  <%= f.text_field :title %>
+  <%= f.label :title,'Title'  %>
+  <%= f.text_field :title,placeholder:'e.g looking for a web developer' %>
+  <%unless project.errors[:title].empty?%>
+    <div class="error">
+      <i class="fas fa-exclamation-circle"></i>
+      <%=project.errors[:title][0]%></div>
+  <% end %>
 </div>
