--- a/app/assets/stylesheets/profile/_user-profile.scss
+++ b/app/assets/stylesheets/profile/_user-profile.scss
@@ -42,7 +42,8 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   }
 }
 
-.user__picture {
+.user__picture-freelancer,
+.user__picture-client {
   position: absolute;
   right: 50%;
   transform: translate(50%, -50%);
@@ -65,6 +66,12 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     transition: width 0.5s;
   }
 }
+.user__picture-client {
+  &::after {
+    border-color: rgb(0, 119, 255);
+  }
+}
+
 .user__profile {
   list-style-type: none;
   font-size: 1rem;
@@ -75,6 +82,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   height: 100%;
   gap: 1rem;
   position: relative;
+
   & > li {
     font-family: $font;
     width: 100%;
@@ -88,14 +96,14 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     width: 100%;
 
     div {
-      font-family: $font;
-      font-weight: 400;
+      font-weight: 600;
       font-size: 0.8rem;
       color: #696969;
     }
     @include borderBottom;
   }
-  .details__tab {
+  .details__tab-freelancer,
+  .details__tab-client {
     line-height: normal;
     display: flex;
     list-style-type: none;
@@ -107,7 +115,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     gap: 3rem;
     height: 40px;
     position: relative;
-    justify-content: center;
+    justify-content: space-around;
     & > li {
       padding: 0.5rem 1rem;
       font-family: $font;
@@ -119,6 +127,13 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
         font-weight: 700;
         color: black;
       }
+    }
+  }
+  .details__tab-client {
+    justify-content: flex-start;
+    gap: 4rem;
+    &:first-child {
+      padding-left: 1rem;
     }
   }
   .tab__slider-0 {
@@ -198,6 +213,83 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   .user__experience > .no__experience {
     @include svg();
   }
+  .user__bio {
+    .joined_on {
+      text-align: right;
+      color: #353535;
+      margin-bottom: 0.4rem;
+    }
+  }
+  .user__experience {
+    padding: 0;
+    .bids__record,
+    .projects__record {
+      display: flex;
+      flex-direction: column;
+
+      li {
+        font-size: 1.1rem;
+        border-bottom: 1px solid rgb(226, 226, 226);
+        padding: 0.5rem 1rem 1rem;
+        display: flex;
+        transition: all 0.5s;
+        a {
+          font-size: 0.85rem;
+          color: black;
+          text-decoration: none;
+          flex: 1 1 70%;
+          &:hover {
+            color: green;
+            text-decoration: underline;
+            cursor: pointer;
+          }
+        }
+        span {
+          font-size: 0.9rem;
+          text-align: center;
+          position: relative;
+          flex: 1 1 10%;
+          color: #666;
+        }
+        &:hover {
+          background: rgb(245, 245, 245);
+        }
+      }
+    }
+    .projects__record {
+      li {
+        padding: 1rem;
+        a {
+          font-family: "Quicksand", serif;
+          font-weight: 600;
+          font-size: 1.2rem;
+          line-height: 1.3rem;
+          word-spacing: 2px;
+        }
+      }
+    }
+  }
+  .user__details {
+    padding: 0;
+    position: relative;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    .user__statistics {
+      width: 100%;
+      padding-top: 1rem;
+      border-top: 1px solid rgb(189, 189, 189);
+      border-bottom: 1px solid rgb(189, 189, 189);
+
+      span {
+        display: block;
+        color: #353535;
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+      }
+    }
+  }
   .slide__in {
     width: 100%;
     transform: translateX(0%);
@@ -217,11 +309,12 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   align-items: center;
   & > div {
     font-family: $font;
-    font-size: 2rem;
+    font-size: 1.2rem;
     flex: 1;
 
     div {
       position: relative;
+      margin-bottom: 0.5rem;
       &::after {
         content: "";
         position: absolute;
