--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -129,22 +129,15 @@ $font-quicksand: "Quicksand", serif;
       }
     }
     .project__description-form {
-      font-family: "montserrat";
       position: relative;
+      align-self: initial;
+      flex-basis: 270px;
+      #project_description {
+        min-height: 250px;
+      }
       .field_with_errors {
         textarea {
           border: 1px solid red;
-        }
-      }
-      textarea {
-        width: 100%;
-        height: 180px;
-        padding: 1rem;
-        position: relative;
-        outline: none;
-        border: $border;
-        &:focus {
-          border: 1px solid green;
         }
       }
     }
@@ -223,12 +216,7 @@ $font-quicksand: "Quicksand", serif;
   max-width: 600px;
   padding: 1rem 0 1rem;
   transition: transform 0.6s;
-  overflow: scroll;
-  max-height: 90vh;
-  scrollbar-width: none;
-  &::-webkit-scrollbar {
-    width: 0;
-  }
+
   .projects__heading,
   .bid-history__heading {
     display: flex;
@@ -384,8 +372,10 @@ $font-quicksand: "Quicksand", serif;
     width: 100%;
     height: 70px;
     border-bottom: $border;
-
+    position: sticky;
+    top: 0;
     background: white;
+    z-index: 20;
     i {
       line-height: 70px;
       color: green;
@@ -402,90 +392,84 @@ $font-quicksand: "Quicksand", serif;
     border-top-left-radius: 0.5rem;
     background: white;
 
-    .job__post-title-category-time {
+    .job__post-title {
       min-height: 4rem;
       position: relative;
 
       h3 {
         text-transform: capitalize;
-        padding: 1.5rem;
+        padding: 1rem 1rem 1.5rem;
         font-size: 1.4rem;
         word-spacing: 2px;
         font-weight: 600;
       }
-      .job__category {
-        position: absolute;
-        bottom: 5px;
-        left: 1.5rem;
-        p {
-          font-family: $font-comfortaa;
-          font-weight: 500;
-          font-size: 0.7rem;
-          word-spacing: 3px;
-          color: #242424;
-        }
-      }
+
       .posted__at-time {
         position: absolute;
         bottom: 5px;
         right: 1rem;
         p {
-          font-family: $font-comfortaa;
           font-weight: 400;
           font-size: 0.7rem;
-          word-spacing: 3px;
-          color: green;
         }
+      }
+    }
+    .job__category {
+      padding: 1rem 1.5rem 2rem;
+      border-top: $border;
+      p {
+        font-weight: 500;
+        font-size: 0.9rem;
+        color: #242424;
       }
     }
     .job__post-description {
       border-top: 1px solid #d6d2d2;
-      padding: 1rem;
-      p {
-        font-family: $font-quicksand;
-        font-weight: 500;
-        font-size: 0.9rem;
-        word-spacing: 3px;
-        line-height: 1.3rem;
+      padding: 1rem 1.5rem 2rem;
+      h3 {
+        margin-bottom: 0.5rem;
+      }
+    }
+    .job__post-attachments {
+      padding: 1rem 1.5rem 2rem;
+      border-top: $border;
+
+      a {
+        display: block;
+        color: black;
+        text-decoration: none;
+        &:hover {
+          color: green;
+          text-decoration: underline;
+        }
       }
     }
 
     .all_proposals {
       border-top: $border;
-      padding: 0.8rem;
+      padding: 1rem 1.5rem 2rem;
       position: relative;
-      h4 {
-        font-weight: 400;
-        font-size: 1rem;
-        margin-bottom: 0.5rem;
-      }
+
       & > ul {
         padding-top: 0.5rem;
         padding-right: 2rem;
         list-style-type: none;
-        display: flex;
-        gap: 2rem;
-        justify-content: flex-start;
 
         li {
-          text-align: center;
           position: relative;
-          div {
-            font-size: 1.4rem;
-            font-weight: 300;
-            color: green;
+          span:first-child {
+            font-size: 1.1rem;
+            color: #353535;
           }
-          span {
-            padding: 0 0 0.5rem;
-            display: block;
-            font-size: 0.7rem;
-            color: #242424;
+          span:last-child {
             font-family: $font-comfortaa;
+            font-weight: 700;
+            border-bottom: 1px solid rgb(95, 95, 95);
+            font-size: 1.1rem;
           }
         }
         .login__btn-to-continue {
-          flex-basis: 130px;
-          margin-left: auto;
+          margin: 1rem 0 1rem 0;
           a {
             display: block;
             background: #37a000;
@@ -498,28 +482,12 @@ $font-quicksand: "Quicksand", serif;
             border: none;
             border-radius: 0.5rem;
             transition: all 0.6s;
-            width: 100%;
+            width: 150px;
             &:hover {
               background: #2a7900;
               cursor: pointer;
             }
           }
-          span {
-            padding: 0.5rem 0 1rem;
-            font-size: 0.8rem;
-          }
-        }
-      }
-      .about__client {
-        position: absolute;
-        bottom: 5px;
-        right: 1rem;
-        p {
-          font-family: $font-comfortaa;
-          font-weight: 400;
-          font-size: 0.7rem;
-          word-spacing: 3px;
-          color: green;
         }
       }
     }
@@ -548,11 +516,12 @@ $font-quicksand: "Quicksand", serif;
         }
         .bid__value-field {
           margin-left: auto;
+          flex-basis: 200px;
 
           .errors {
-            padding: 0.1rem 0rem;
             word-spacing: 2px;
             font-size: 0.8rem;
+            font-weight: 500;
           }
         }
         .bid__value-field,
