--- a/app/views/profiles/_details.html.erb
+++ b/app/views/profiles/_details.html.erb
@@ -1,8 +1,9 @@
 <li class="user__details">
-  <div class="user__name">
-  </div>
-  <div class="user__name">
-  </div>
-  <div class="joined_on">
+  <div class="user__statistics">
+    <span> Total Bids: <%= total_bids_by_user?(user)%></span>
+    <span>  Project Awarded: <%=total_projects_done(user)%></span>
+    <span>  Avg. Bid  $<%=average_bid_value(user)%></span>
+    <span>  Max. Bid  $<%=maximum_bid_by_user(user)%></span>
+    <span>  Min. Bid  $<%=minimum_bid_by_user(user)%></span>
   </div>
 </li>
