--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,3 @@
 <aside class="project__modal">
-  <%=render "job__post-modal", {project: @project,bid: @bid ,bids: @bids} %>
+  <%=render "job__post-modal", {project: @project,bid: @bid } %>
 </aside>
